pascal/quickjs.pas


// Special JSValue constructors (equivalents of JS_UNDEFINED, JS_NULL, ... macros)
function JS_UNDEFINED: JSValue; inline;
begin
  Result.u.int32 := 0;
  Result.tag := JS_TAG_UNDEFINED;
end;

function JS_NULL: JSValue; inline;
begin
  Result.u.int32 := 0;
  Result.tag := JS_TAG_NULL;
end;

function JS_FALSE: JSValue; inline;
begin
  Result.u.int32 := 0;
  Result.tag := JS_TAG_BOOL;
end;

function JS_TRUE: JSValue; inline;
begin
  Result.u.int32 := 1;
  Result.tag := JS_TAG_BOOL;
end;

function JS_EXCEPTION: JSValue; inline;
begin
  Result.u.int32 := 0;
  Result.tag := JS_TAG_EXCEPTION;
end;

function JS_UNINITIALIZED: JSValue; inline;
begin
  Result.u.int32 := 0;
  Result.tag := JS_TAG_UNINITIALIZED;
end;

// Value check helpers implemented in Pascal (these are inline in quickjs.h)
function JS_IsUndefined(v: JSValueConst): cint; cdecl;
begin
  if JS_VALUE_GET_TAG(v) = JS_TAG_UNDEFINED then
    Result := 1
  else
    Result := 0;
end;

function JS_IsNull(v: JSValueConst): cint; cdecl;
begin
  if JS_VALUE_GET_TAG(v) = JS_TAG_NULL then
    Result := 1
  else
    Result := 0;
end;

function JS_IsBool(v: JSValueConst): cint; cdecl;
begin
  if JS_VALUE_GET_TAG(v) = JS_TAG_BOOL then
    Result := 1
  else
    Result := 0;
end;

function JS_IsNumber(v: JSValueConst): cint; cdecl;
var
  tag: cint;
begin
  tag := JS_VALUE_GET_TAG(v);
  if (tag = JS_TAG_INT) or (tag >= JS_TAG_FLOAT64) then
    Result := 1
  else
    Result := 0;
end;

function JS_IsBigInt(v: JSValueConst): cint; cdecl;
var
  tag: cint;
begin
  tag := JS_VALUE_GET_TAG(v);
  if (tag = JS_TAG_BIG_INT) or (tag = JS_TAG_SHORT_BIG_INT) then
    Result := 1
  else
    Result := 0;
end;

function JS_IsString(v: JSValueConst): cint; cdecl;
begin
  if JS_VALUE_GET_TAG(v) = JS_TAG_STRING then
    Result := 1
  else
    Result := 0;
end;

function JS_IsObject(v: JSValueConst): cint; cdecl;
begin
  if JS_VALUE_GET_TAG(v) = JS_TAG_OBJECT then
    Result := 1
  else
    Result := 0;
end;

function JS_IsException(v: JSValueConst): cint; cdecl;
begin
  if JS_VALUE_GET_TAG(v) = JS_TAG_EXCEPTION then
    Result := 1
  else
    Result := 0;
end;

function JS_IsUninitialized(v: JSValueConst): cint; cdecl;
begin
  if JS_VALUE_GET_TAG(v) = JS_TAG_UNINITIALIZED then
    Result := 1
  else
    Result := 0;
end;

function JS_NewBool(ctx: PJSContext; val: cint): JSValue; cdecl;
begin
  // ctx is unused but kept for signature compatibility
  Result.tag := JS_TAG_BOOL;
  if val <> 0 then
    Result.u.int32 := 1
  else
    Result.u.int32 := 0;
end;

function JS_NewFloat64(ctx: PJSContext; val: cdouble): JSValue; cdecl;
begin
  // ctx is unused; matches non-NAN_BOXING layout: tag + float64
  Result.tag := JS_TAG_FLOAT64;
  Result.u.float64 := val;
end;

function JS_NewInt32(ctx: PJSContext; val: cint32): JSValue; cdecl;
begin
  // Dùng đúng tag INT như quickjs.h (non-NAN_BOXING)
  Result.tag := JS_TAG_INT;
  Result.u.int32 := val;
end;

function JS_NewInt64(ctx: PJSContext; val: cint64): JSValue; cdecl;
begin
  // Nếu trong khoảng Int32 thì dùng JS_TAG_INT, ngược lại dùng số thực 64-bit
  if (val >= Low(cint32)) and (val <= High(cint32)) then
  begin
    Result.tag := JS_TAG_INT;
    Result.u.int32 := cint32(val);
  end
  else
  begin
    Result := JS_NewFloat64(ctx, val);
  end;
end;

function JS_NewString(ctx: PJSContext; str: PChar): JSValue; cdecl;
var
  len: csize_t;
begin
  if str = nil then
    len := 0
  else
    len := csize_t(StrLen(str));
  Result := JS_NewStringLen(ctx, str, len);
end;

function JS_ToCStringLen(ctx: PJSContext; plen: Pcsize_t; val: JSValueConst): PChar; cdecl;
begin
  Result := JS_ToCStringLen2(ctx, plen, val, 0);
end;

function JS_ToCString(ctx: PJSContext; val: JSValueConst): PChar; cdecl;
begin
  Result := JS_ToCStringLen2(ctx, nil, val, 0);
end;

function JS_NewCFunction(ctx: PJSContext; func: JSCFunction; name: PChar; length: cint): JSValue; cdecl;
begin
  // cproto = 0 tương ứng JS_CFUNC_generic trong quickjs.h, magic = 0
  Result := JS_NewCFunction2(ctx, func, name, length, 0, 0);
end;

end.

